# rust-sam-sample

./: Cargo.toml  Makefile  README.md  samconfig.toml  template.yml
src/: app.rs
src/handlers/: ping.rs
